--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!-- Kontener dla panoramy -->
-    <div>my360</div>
+    <div>my360-2</div>
     <div id="panorama"></div>
     <script type="text/javascript">
         // Inicjalizacja Pannellum
