--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
         // Inicjalizacja Pannellum
         pannellum.viewer('panorama', {
             "type": "equirectangular",
-            <!--"panorama": "https://jaro-lef.github.io/my360/images/IMG_20250407_204528_00_010org_r.jpg",-->
-            "panorama": "https://photos.app.goo.gl/oJNQw4GibSLaoR4t9",
+            "panorama": "https://jaro-lef.github.io/my360/images/IMG_20250407_204528_00_010org_r.jpg",
             "autoLoad": true
         });
     </script>
