--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <script type="text/javascript" src="https://cdn.pannellum.org/2.5/pannellum.js"></script>
     <style>
         body { margin: 0; padding: 0; }
-        #panorama { width: 100%; height: 100vh; }
+        #panorama { width: 50%; height: 50vh; }
     </style>
 </head>
 <body>
     <!-- Kontener dla panoramy -->
+    <div>my360</div>
     <div id="panorama"></div>
     <script type="text/javascript">
         // Inicjalizacja Pannellum
