--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         }
 
         #panorama  {
-            height: 60vh; /* 60% wysokości widoku */
-            aspect-ratio: 16 / 9; /* Zachowuje proporcje szerokości */
+            height: 60vh; /* 60% wysokości widoku */            
+            width: 6vw; /* 6% szerokości widoku */
             background-color: #ccc; /* tymczasowy kolor tła */
             box-shadow: 0 0 20px rgba(0,0,0,0.3);
         }
@@ -28,14 +28,24 @@
 </head>
 <body>
     <!-- Kontener dla panoramy -->
-    <div>my360-2</div>
     <div id="panorama"></div>
     <script type="text/javascript">
         // Inicjalizacja Pannellum
         pannellum.viewer('panorama', {
             "type": "equirectangular",
             "panorama": "https://jaro-lef.github.io/my360/images/IMG_20250407_204528_00_010org_r.jpg",
-            "autoLoad": true
+            "autoLoad": true,
+            "showControls": true,
+            "showZoomCtrl": true,
+            "showFullscreenCtrl": true,
+            "autoRotate": -2,
+            "autoRotateInactivityDelay": 2000,
+            "autoRotateDelay": 2000,
+            "maxHfov": 180,
+            "minHfov": 90,
+            "compass": true,
+            "compassResetLookAt": true,
+            "yaw": 90,
         });
     </script>
 </body>
