--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
             "showControls": true,
             "showZoomCtrl": true,
             "showFullscreenCtrl": true,
-            "autoRotate": -2,
+            "autoRotate": -4,
             "autoRotateInactivityDelay": 2000,
             "autoRotateDelay": 2000,
-            "maxHfov": 130,
-            "minHfov": 100,
+            "maxHfov": 160,
+            "hfov": 140,            
+            "minHfov": 120,
             "compass": true,
             "compassResetLookAt": true,
-            "yaw": 90,
+            "yaw": -90,
         });
     </script>
 </body>
