--- a/index — kopia.html
+++ b/index — kopia.html
@@ -9,17 +9,21 @@
     <script type="text/javascript" src="https://cdn.pannellum.org/2.5/pannellum.js"></script>
     <style>               
         body {
-            margin: 0;                        
+            margin: 0;
+            height: 100vh;
+            display: flex;
             align-items: center;
             justify-content: center;
             background: #f0f0f0;
         }
 
         #panorama  {
-            height: 80%;
-            width: 80%;
-            background-color: #ccc;
+            height: 60vh; /* 60% wysokości widoku */            
+            width: 80vw; /* 80% szerokości widoku */
+            background-color: #ccc; /* tymczasowy kolor tła */
+            box-shadow: 0 0 20px rgba(0,0,0,0.3);
         }
+
     </style>
 </head>
 <body>
