--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         }
 
         #panorama  {
-            height: 60vh; /* 60% wysokości widoku */            
-            width: 80vw; /* 80% szerokości widoku */
+            height: 100vh;
+            width: 100vw;
             background-color: #ccc; /* tymczasowy kolor tła */
             box-shadow: 0 0 20px rgba(0,0,0,0.3);
         }
@@ -42,7 +42,7 @@
             "autoRotateInactivityDelay": 2000,
             "autoRotateDelay": 2000,
             "maxHfov": 140,
-            "hfov": 120,            
+            "hfov": 100,            
             "minHfov": 100,
             "compass": true,
             "compassResetLookAt": true,
